--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Deploy WordPress to VPS
 on:
   push:
     branches:
-      - main  # branch name
+      - main  # Branch name
 
 jobs:
   deploy:
@@ -14,9 +14,13 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Set up SSH keys
-        uses: webfactory/ssh-agent@v0.5
-        with:
-          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+        run: |
+          mkdir -p ~/.ssh
+          echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+          ssh-keyscan -H mywordpress.ddns.net >> ~/.ssh/known_hosts
+        env:
+          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
 
       - name: Install Dependencies and Build
         run: |
@@ -30,4 +34,5 @@ jobs:
 
       - name: Cleanup
         run: |
-          # cleanup steps 
+          # cleanup steps
+
