--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,8 +30,10 @@ jobs:
       - name: Deploy to VPS
         run: |
           # Securely transfer files to VPS
-          scp -o StrictHostKeyChecking=no -r /var/www/html/wordpress/newwordpress/* ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_IP }}:/var/www/html/wordpress/newwordpress
+          # Use -o StrictHostKeyChecking=no to disable host key checking
+          scp -o StrictHostKeyChecking=no -r ./var/www/html/wordpress/newwordpress/* ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_IP }}:/var/www/html/wordpress/newwordpress
 
       - name: Cleanup
         run: |
           # cleanup steps
+
