--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,8 +30,7 @@ jobs:
       - name: Deploy to VPS
         run: |
           # Securely transfer files to VPS
-          # Use -o StrictHostKeyChecking=no to disable host key checking
-          scp -o StrictHostKeyChecking=no -r ./* ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_IP }}:/var/www/html/wordpress/newwordpress
+          scp -r ./* ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_IP }}:/var/www/html/wordpress/newwordpress
 
       - name: Cleanup
         run: |
